# res_dummy

./: CMakeLists.txt  readme.txt  res_dummy.c
CMakeModules/: Findasterisk.cmake
